-feat: add meta url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     content="Bringing your fashion visions to life with perfect fits. Subscribe now for exclusive early access!">
   <meta property="og:image"
     content="https://res.cloudinary.com/dc2znq9fd/image/upload/v1739226062/Hoosie_Couture_Luxury_Logo_goqo20.jpg">
-  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:url" content="https://hoosie-couture.vercel.app/">
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="/src/style.css">
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
