feat: - add audio background

--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
       </div>
     </div>
 
+    <div id="music-icon" class="animate-pulse absolute top-1 left-1">
+      🎵🎵🎵🎵
+    </div>
+
+    <div id="music-icon" class="animate-pulse absolute top-1 right-1">
+      🎵🎵🎵🎵
+    </div>
+
+    <audio autoplay loop>
+      <source src="https://res.cloudinary.com/dc2znq9fd/video/upload/v1739227853/relax-lovely-beats-287578_pdtfbc.mp3"
+        type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+
+
     <footer class="mt-16 text-gray-600 font-bold">
       <p>© 2025 Hoosie Couture & Lifestyle. All rights reserved.</p>
       <p class="mt-2">Opening Soon</p>
