--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       🎵🎵🎵🎵
     </div>
 
-    <audio autoplay loop>
+    <audio id="bg-music" autoplay loop>
       <source src="https://res.cloudinary.com/dc2znq9fd/video/upload/v1739227853/relax-lovely-beats-287578_pdtfbc.mp3"
         type="audio/mp3">
       Your browser does not support the audio element.
@@ -171,6 +171,19 @@
   <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
   <script
     type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'COMPANY'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+
+  <script>
+    const audio = document.getElementById("bg-music");
+
+    window.addEventListener("load", () => {
+      audio.muted = true;  // Start muted to allow autoplay
+      audio.play().then(() => {
+        audio.muted = false;  // Unmute after play starts
+      }).catch(error => {
+        console.log("Autoplay blocked, waiting for user interaction...");
+      });
+    });
+  </script>
 </body>
 
 </html>
