fix: change tag

--- a/index.html
+++ b/index.html
@@ -155,11 +155,14 @@
       🎵🎵🎵🎵
     </div>
 
-    <audio id="bg-music" autoplay loop>
+    <!-- <audio id="bg-music" autoplay loop>
       <source src="https://res.cloudinary.com/dc2znq9fd/video/upload/v1739227853/relax-lovely-beats-287578_pdtfbc.mp3"
         type="audio/mp3">
       Your browser does not support the audio element.
-    </audio>
+    </audio> -->
+
+    <iframe src="https://res.cloudinary.com/dc2znq9fd/video/upload/v1739227853/relax-lovely-beats-287578_pdtfbc.mp3"
+      allow="autoplay" id="audio" style="display: none"></iframe>
 
 
     <footer class="mt-16 text-gray-600 font-bold">
