style: change button text color

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     #mc_embed_shell #mc_embed_signup .button {
       background-color: #C9B037;
       transition: background-color 0.3s ease-in-out;
+      color: #000000;
+      font-weight: 800;
     }
 
     #mc_embed_shell #mc_embed_signup .button:hover {
