--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       transition: background-color 0.3s ease-in-out;
       color: #000000;
       font-weight: 800;
+      height: 42px;
     }
 
     #mc_embed_shell #mc_embed_signup .button:hover {
