--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 </head>
 
 <body class="min-h-screen bg-gray-50 flex flex-col items-center justify-center p-4">
+
+  <div class="valentine-message">
+    <h3>Happy Valentine's Day! ❤️</h3>
+  </div>
+
   <div class="max-w-4xl w-full text-center space-y-8">
     <!-- Logo placeholder -->
     <div class="floating mb-8 flex justify-center">
@@ -159,6 +164,8 @@
   <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
   <script
     type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'COMPANY'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+  <script type="text/javascript" src="/src/main.js"></script>
+
 </body>
 
 </html>
