--- a/index.html
+++ b/index.html
@@ -164,7 +164,39 @@
   <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
   <script
     type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'COMPANY'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-  <script type="text/javascript" src="/src/main.js"></script>
+
+  <script>
+
+    // Immediately create a heart when the page loads
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.innerHTML = '❤️🌹';
+      heart.className = 'heart';
+      heart.style.left = Math.random() * window.innerWidth + 'px';
+      heart.style.top = '-20px';
+      document.body.appendChild(heart);
+
+      // Animate the heart falling
+      let position = -20;
+      const interval = setInterval(() => {
+        position += 2;
+        heart.style.top = position + 'px';
+
+        // Remove heart when it reaches bottom of screen
+        if (position > window.innerHeight) {
+          clearInterval(interval);
+          heart.remove();
+        }
+      }, 20);
+    }
+
+    const today = new Date();
+    const valMessage = document.querySelector('.valentine-message');
+    if (today.getMonth() === 1 && today.getDate() === 14) {
+      setInterval(createHeart, 300);
+      valMessage.style.display = 'block';
+    }
+  </script>
 
 </body>
 
